New main file added
Adding first thing first instruction to do in main file.

--- a/Jef Fry Suhendra_final_project.ipynb
+++ b/Jef Fry Suhendra_final_project.ipynb
@@ -21,6 +21,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#############################################################################################\n",
+    "#### First things to do : make sure your sign in email id is in \"Less secure app Mode:ON\"\n",
+    "#############################################################################################\n",
+    "#### check at : https://myaccount.google.com/, then search \"Less secure app\", and turn it ON!\n",
+    "#############################################################################################\n",
+    "\n",
     "while True:   ##### Confirmation of email format is correct\n",
     "    email_id = input(\"Username: \")\n",
     "    for i in range(len(email_id)):\n",
